fix score calculation

--- a/mandarin/quiz.css
+++ b/mandarin/quiz.css
@@ -183,6 +183,7 @@ body {
 .logo-container {
     margin-top: 1em;
     text-align: center;
+    width: 100px;
 }
 
 .chinese-listening-test-title {
